doc/userguide: avoid horizontal scroll on rtd
Add CSS to avoid horizontal scroll in tables on ReadTheDocs. This will
wrap the text instead.

Also, vertically align to top so if a cell does wrap, other cells that
do not wrap don't place the text in the middle of the cell.

--- a/doc/userguide/_static/css/suricata.css
+++ b/doc/userguide/_static/css/suricata.css
@@ -25,3 +25,10 @@
 .example-rule-options {
     color: #00f;
 }
+
+/* Make tables wrap text to avoid requiring the user to horizontally
+ * scroll. */
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: inherit;
+    vertical-align: top !important;
+}
